// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActiveTabTimeline ActiveTabGlobalTrack matches the snapshot of a global tab track 1`] = `
<li
  class="timelineTrack"
>
  <div
    class="timelineTrackRow timelineTrackGlobalRow activeTab"
  >
    <div
      class="timelineTrackTrack"
    >
      <div
        class="timelineTrackThread expanded"
      >
        <div
          class="timelineMarkers"
          data-testid="TimelineMarkersJank"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <div>
              <canvas
                class="timelineMarkersCanvas"
                height="300"
                width="200"
              />
            </div>
          </div>
        </div>
        <div
          class="timelineMarkers timelineMarkersGeckoMain"
          data-testid="TimelineMarkersOverview"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <div>
              <canvas
                class="timelineMarkersCanvas"
                height="300"
                width="200"
              />
            </div>
          </div>
        </div>
        <div
          class="threadActivityGraph"
        >
          <div>
            <canvas
              class="threadActivityGraphCanvas threadActivityGraphCanvas"
              height="300"
              width="200"
            >
              <h2>
                Activity Graph for 
                Active Tab
              </h2>
              <p>
                This graph shows a visual chart of thread activity.
              </p>
            </canvas>
          </div>
        </div>
        <div
          class="threadSampleGraph"
        >
          <div>
            <canvas
              class="threadSampleGraphCanvas threadSampleGraphCanvas"
              height="300"
              width="200"
            >
              <h2>
                Stack Graph for 
                Active Tab
              </h2>
              <p>
                This graph charts the stack height of each sample.
              </p>
            </canvas>
          </div>
        </div>
        <div
          class="timelineEmptyThreadIndicator"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`ActiveTabTimeline ActiveTabResourceTrack with a thread/sub-frame track matches the snapshot of a resource track 1`] = `
<li
  class="timelineTrack timelineTrackResource"
>
  <div
    class="timelineTrackRow timelineTrackResourceRow"
  >
    <div
      class="timelineTrackResourceLabel"
    >
      <span>
        IFrame:
      </span>
       
      Page #3
    </div>
    <div
      class="timelineTrackTrack"
    >
      <div
        class="timelineTrackThread condensed"
      >
        <div
          class="timelineMarkers"
          data-testid="TimelineMarkersJank"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <div>
              <canvas
                class="timelineMarkersCanvas"
                height="300"
                width="200"
              />
            </div>
          </div>
        </div>
        <div
          class="threadActivityGraph"
        >
          <div>
            <canvas
              class="threadActivityGraphCanvas threadActivityGraphCanvas"
              height="300"
              width="200"
            >
              <h2>
                Activity Graph for 
                Page #3
              </h2>
              <p>
                This graph shows a visual chart of thread activity.
              </p>
            </canvas>
          </div>
        </div>
        <div
          class="timelineEmptyThreadIndicator"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`ActiveTabTimeline ActiveTabResourcesPanel matches the snapshot of a resources panel when closed 1`] = `
<div
  class="timelineResources"
  style="--resources-header-height: 20px;"
>
  <div
    class="timelineResourcesHeader"
  >
    Resources (
    1
    )
    <div
      class="timelineTrackThread condensed"
    >
      <div
        class="timelineMarkers"
        data-testid="TimelineMarkersJank"
      >
        <div
          class="react-contextmenu-wrapper"
        >
          <div>
            <canvas
              class="timelineMarkersCanvas"
              height="300"
              width="200"
            />
          </div>
        </div>
      </div>
      <div
        class="threadActivityGraph"
      >
        <div>
          <canvas
            class="threadActivityGraphCanvas threadActivityGraphCanvas"
            height="300"
            width="200"
          >
            <h2>
              Activity Graph for 
              Merged resource tracks
            </h2>
            <p>
              This graph shows a visual chart of thread activity.
            </p>
          </canvas>
        </div>
      </div>
      <div
        class="timelineEmptyThreadIndicator"
      />
    </div>
  </div>
</div>
`;

exports[`ActiveTabTimeline ActiveTabResourcesPanel matches the snapshot of a resources panel when opened 1`] = `
<div
  class="timelineResources"
  style="--resources-header-height: 20px;"
>
  <div
    class="timelineResourcesHeader opened"
  >
    Resources (
    1
    )
    <div
      class="timelineTrackThread condensed"
    >
      <div
        class="timelineMarkers"
        data-testid="TimelineMarkersJank"
      >
        <div
          class="react-contextmenu-wrapper"
        >
          <div>
            <canvas
              class="timelineMarkersCanvas"
              height="300"
              width="200"
            />
          </div>
        </div>
      </div>
      <div
        class="threadActivityGraph"
      >
        <div>
          <canvas
            class="threadActivityGraphCanvas threadActivityGraphCanvas"
            height="300"
            width="200"
          >
            <h2>
              Activity Graph for 
              Merged resource tracks
            </h2>
            <p>
              This graph shows a visual chart of thread activity.
            </p>
          </canvas>
        </div>
      </div>
      <div
        class="timelineEmptyThreadIndicator"
      />
    </div>
  </div>
  <ol
    class="timelineResourceTracks"
  >
    <li
      class="timelineTrack timelineTrackResource"
    >
      <div
        class="timelineTrackRow timelineTrackResourceRow"
      >
        <div
          class="timelineTrackResourceLabel"
        >
          <span>
            IFrame:
          </span>
           
          Page #2
        </div>
        <div
          class="timelineTrackTrack"
        >
          <div
            class="timelineTrackThread condensed"
          >
            <div
              class="timelineMarkers"
              data-testid="TimelineMarkersJank"
            >
              <div
                class="react-contextmenu-wrapper"
              >
                <div>
                  <canvas
                    class="timelineMarkersCanvas"
                    height="300"
                    width="200"
                  />
                </div>
              </div>
            </div>
            <div
              class="threadActivityGraph"
            >
              <div>
                <canvas
                  class="threadActivityGraphCanvas threadActivityGraphCanvas"
                  height="300"
                  width="200"
                >
                  <h2>
                    Activity Graph for 
                    Page #2
                  </h2>
                  <p>
                    This graph shows a visual chart of thread activity.
                  </p>
                </canvas>
              </div>
            </div>
            <div
              class="timelineEmptyThreadIndicator"
            />
          </div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`ActiveTabTimeline should be rendered properly from the Timeline component 1`] = `
<div
  class="timelineSelection activeTab"
>
  <div
    class="timelineRuler"
    style="--timeline-ruler-height: 20px;"
  >
    <ol
      class="timelineRulerContainer"
    >
      <li
        class="timelineRulerNotch"
        style="left: 0px;"
      >
        <span
          class="timelineRulerNotchText"
        >
          0s
        </span>
      </li>
      <li
        class="timelineRulerNotch"
        style="left: 100px;"
      >
        <span
          class="timelineRulerNotchText"
        >
          500μs
        </span>
      </li>
      <li
        class="timelineRulerNotch"
        style="left: 200px;"
      >
        <span
          class="timelineRulerNotchText"
        >
          1ms
        </span>
      </li>
    </ol>
  </div>
  <div
    class="overflowEdgeIndicator tracksContainer timelineOverflowEdgeIndicator"
  >
    <div
      class="overflowEdgeIndicatorEdge topEdge"
    />
    <div
      class="overflowEdgeIndicatorEdge rightEdge"
    />
    <div
      class="overflowEdgeIndicatorEdge bottomEdge"
    />
    <div
      class="overflowEdgeIndicatorEdge leftEdge"
    />
    <div
      class="overflowEdgeIndicatorScrollbox tracksContainer timelineOverflowEdgeIndicatorScrollbox"
    >
      <div
        class="overflowEdgeIndicatorContentsWrapper"
      >
        <ol
          class="timelineThreadList"
        >
          <li
            class="timelineTrack"
          >
            <div
              class="timelineTrackRow timelineTrackGlobalRow activeTab selected"
            >
              <div
                class="timelineTrackTrack"
              >
                <div
                  class="timelineTrackThread expanded"
                >
                  <div
                    class="timelineMarkers selected"
                    data-testid="TimelineMarkersJank"
                  >
                    <div
                      class="react-contextmenu-wrapper"
                    >
                      <div>
                        <canvas
                          class="timelineMarkersCanvas"
                          height="300"
                          width="200"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="timelineMarkers timelineMarkersGeckoMain selected"
                    data-testid="TimelineMarkersOverview"
                  >
                    <div
                      class="react-contextmenu-wrapper"
                    >
                      <div>
                        <canvas
                          class="timelineMarkersCanvas"
                          height="300"
                          width="200"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="threadActivityGraph"
                  >
                    <div>
                      <canvas
                        class="threadActivityGraphCanvas threadActivityGraphCanvas"
                        height="300"
                        width="200"
                      >
                        <h2>
                          Activity Graph for 
                          Active Tab
                        </h2>
                        <p>
                          This graph shows a visual chart of thread activity.
                        </p>
                      </canvas>
                    </div>
                  </div>
                  <div
                    class="threadSampleGraph"
                  >
                    <div>
                      <canvas
                        class="threadSampleGraphCanvas threadSampleGraphCanvas"
                        height="300"
                        width="200"
                      >
                        <h2>
                          Stack Graph for 
                          Active Tab
                        </h2>
                        <p>
                          This graph charts the stack height of each sample.
                        </p>
                      </canvas>
                    </div>
                  </div>
                  <div
                    class="timelineEmptyThreadIndicator"
                  />
                </div>
              </div>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
  <div
    class="timelineSelectionHoverLine"
    style="visibility: hidden; left: 0px;"
  >
    <span
      class="timelineSelectionOverlayTime"
    />
  </div>
</div>
`;
